// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Rounded 1`] = `
<button
  class="button rounded"
  style="color: rgb(255, 0, 0); border-color: #f00;"
>
  A Button with rounded edges
</button>
`;

exports[`Storyshots Button Square 1`] = `
<button
  class="button"
  style="color: rgb(0, 0, 255); border-color: #00f;"
>
  A Button with square edges
</button>
`;

exports[`Storyshots Button With Default Render 1`] = `
<button
  class="button rounded"
  style="color: rgb(255, 187, 170); border-color: #fba;"
>
   Button with default render! 
</button>
`;

exports[`Storyshots Button With Default Render And Default Slot 1`] = `
<button
  class="button"
  default="default"
  style="color: green; border-color: green;"
>
   ! 
</button>
`;

exports[`Storyshots Button With Default Render And Named Slot 1`] = `
<button
  class="button"
  default="default"
  icon="<svg width=\\"24\\" height=\\"24\\" stroke=\\"currentColor\\" stroke-width=\\"2\\" fill=\\"none\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"css-i6dzq1\\"><path d=\\"m9 18 6-6-6-6\\"/></svg>"
  style="color: blue; border-color: blue;"
>
   ! 
</button>
`;
